--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,23 @@ h4 {
 
 }
 
+.social-icons {
+  position: fixed;
+}
+
+.fa-twitter,
+.fa-facebook {
+  background-color: #eee;
+  padding: 5px;
+  margin-top: 5px;
+  color: #31cfff;
+}
+
+.fa-facebook:hover,
+.fa-twitter:hover {
+  color: #225ea8;
+}
+
 .center {
   text-align: center;
 }
@@ -91,6 +108,7 @@ img {
   border: 2px solid #225ea8;
   color: #31cfff;
 }
+
 
 
 /*D3.js*/
