--- a/css/style.css
+++ b/css/style.css
@@ -187,11 +187,16 @@ svg {
 
 
 
-@media only screen 
-    and (min-device-width : 375px)
-    and (max-device-width : 667px) {
+ @media only screen and (min-width : 320px) {
   #header{ margin-top: 1.5em;}
   #main-title {font-size: 4em;}
   .fact {border-left: none; margin-bottom: 7em;}
   .globe {margin-bottom: 7em;}
   }
+
+  @media only screen and (min-width : 480px) {
+    #header{ margin-top: 1.5em;}
+    #main-title {font-size: 4em;}
+    .fact {border-left: none; margin-bottom: 7em;}
+    .globe {margin-bottom: 7em;}
+   }
