--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ svg {
 
 
  @media only screen and (min-width : 320px) {
+  #main { padding-left: 5%;   padding-right: 5%; }
   #header{ margin-top: 1.5em;}
   #main-title {font-size: 4em;}
   .fact {border-left: none; margin-bottom: 7em;}
@@ -195,6 +196,7 @@ svg {
   }
 
   @media only screen and (min-width : 480px) {
+    #main { padding-left: 5%;   padding-right: 5%; }
     #header{ margin-top: 1.5em;}
     #main-title {font-size: 4em;}
     .fact {border-left: none; margin-bottom: 7em;}
