--- a/css/style.css
+++ b/css/style.css
@@ -93,13 +93,16 @@ img {
   margin-bottom: 12em;
 }
 
+a:link {
+    text-decoration: none;
+}
 
 .btn {
   outline: none;
   box-shadow: none;
   background: #fff;
-  border: 2px solid #31cfff;
-  padding: 0.5em 3em;
+  border: 3px solid #31cfff;
+  padding: 0.5em 1em;
   margin-bottom: 2em;
   margin-top: 1em;
   border-radius: 0px;
@@ -113,6 +116,11 @@ img {
   color: #31cfff;
 }
 
+#credits {
+  float:right;
+  font-weight: bold;
+  margin-bottom: 2em;
+}
 
 /*D3.js*/
 
