--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family:'Abel', sans-serif ;
   color: #969696;
+  background-color: #fff;
 }
 
 
@@ -113,7 +114,7 @@ a:link {
 }
 
 .btn:hover {
-  border: 2px solid #225ea8;
+  border: 4px solid #225ea8;
   color: #31cfff;
 }
 
